# hwan513.github.io

./: .editorconfig  .gitignore  Cargo.toml  README.md  biome.json  mise.toml
.cargo/: config.toml
.github/workflows/: ci.yml  deploy.yml  nextjs.yml  perseus.yml
mise-tasks/: clean  compress-images  dev
mise-tasks/format/: _default  fix
mise-tasks/lint/: _default  fix
projects/: data.json
src/: app.rs  error_views.rs  lib.rs  main.rs
src/components/: about.rs  contact.rs  header.rs  hero.rs  icons.rs  mod.rs  nav.rs  projects.rs
src/markdown/: about.md  blurple.md  leptos.md  quick_draw.md  typefaceoff.md
src/pages/: home.rs
src/style/: colors.css  core.css  main.css  normalize.css  typeface.css
src/style/components/: contact.css  hero.css  nav.css  projects.css  terminal-type.css
src/templates/: index.rs
static/: colors.css  header.css  hero.css  index.css
static/css/: about.css  colors.css  contact.css  header.css  hero.css  index.css  projects.css  reset.css
style/: colors.css  core.css  main.css  main.scss  normalize.css  typeface.css
style/components/: about.css  contact.css  hero.css  nav.css  projects.css
