cargo-features = ["codegen-backend", "trim-paths", "profile-rustflags"]

[package]
name = "portfolio"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1"
leptos = { version = "0.8.2", features = ["nightly"] }
leptos_meta = { version = "0.8.2" }
leptos_router = { version = "0.8.2", features = ["nightly"] }
wasm-bindgen = "=0.2.100"

axum = { version = "0.8.0", optional = true }
leptos_axum = { version = "0.8.0", optional = true }
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }

[features]
csr = ["leptos/csr"]
hydrate = ["leptos/hydrate"]
ssr = [
  "dep:axum",
  "dep:tokio",
  "dep:leptos_axum",
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
]
[profile.dev]
debug = 0
rustflags = ["--cfg", "erase_components"]

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
# strip = true # disabled due to https://github.com/leptos-rs/cargo-leptos/issues/441
lto = true
codegen-units = 1
panic = "abort"
trim-paths = "all"
rustflags = ["-Zlocation-detail=none"]

[package.metadata.leptos]
style-file = "style/output.css"
assets-dir = "assets"
site-root = "dist"
site-addr = "127.0.0.1:3000"
reload-port = 3001
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"
js-minify = true
browserquery = "defaults"
env = "DEV"
bin-features = ["ssr"]
lib-features = ["hydrate"]
lib-profile-release = "wasm-release"
